# easyrepo

./: CHANGELOG.md  README.md  pyproject.toml
easyrepo/: __init__.py
easyrepo/interface/: crud.py  paging.py
easyrepo/model/: mongo.py  objectid.py  paging.py  sorting.py  sql.py
easyrepo/repository/: memory.py  mongo.py  mongoengine.py  sql.py
tests/model/: test_paging.py  test_sorting.py
tests/repository/: test_memory.py  test_mongo.py  test_mongoengine.py  test_sql.py
