[tool.poetry]
name = "easyrepo"
version = "0.1.0"
description = "Simple and flexible repository pattern implementation for Python."
authors = ["kobibleu <vincent.terese@live.fr>"]
readme = "README.md"
repository = "https://github.com/kobibleu/easyrepo"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

pydantic = ">=1.9.0"

pymongo = { version = "==3.12.3", optional = true }

[tool.poetry.extras]
mongo = ["pymongo", "mongomock"]

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
mongomock = ">= 3.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

